# ai-privacy-firewall

./: .env  .gitignore  FIRMWARE_ASSESSMENT.md  README.md  docker-compose.yml  install.sh  requirements.txt  setup.py  test_complete_pipeline.sh
ai/: __init__.py
ai/models/: __init__.py  dns_classifier.py
ai/services/: __init__.py  threat_detector.py
ai/utils/: __init__.py  feature_extractor.py
backend/: database.py  dependencies.py  init_database.py  main.py
backend/config/: settings.py
backend/models/: audit_log.py  dns_models.py  users.py
backend/routes/: dns.py  privacy.py  users.py
backend/schemas/: dns_schemas.py  token_schema.py  user_schemas.py
backend/services/: auth.py  logger.py  oauth.py  scoring.py  stream.py
backend/utils/: crypto.py
dashboard/: index.html
device/: config.json.example  dns_monitor.py  dns_monitor.service  enroll_and_send.py
dns_monitoring/: BUILD.md  CMakeLists.txt  dns_monitor.cpp  dns_monitor.h  dns_monitor_wrapper.py  main.cpp  python_bindings.cpp  test_build.sh  test_data_pipeline.py
dns_monitorng/: BUILD.md  CMakeLists.txt  dns_monitor.cpp  dns_monitor.h  main.cpp  python_bindings.cpp
docs/: architecture.md  deployment.md  examples.md  modules.md  timeline.md
firmware/: test_firmware_structure.c
firmware/cube_app_package/: README.md  STM32F407_INTEGRATION_GUIDE.md  app_main.c  app_main.h  config.c  config.h  dns_batch.c  dns_batch.h  dns_capture.c  dns_capture.h  hmac_sha256.c  hmac_sha256.h  net_client.c  net_client.h  test_compile.sh  util.c  util.h
frontend/: README.md  package-lock.json  package.json  server.js
frontend/public/: index.html  login.js  styles.css
tests/: test_backend.py  test_main.py  test_stream_ingest.py
tests/e2e/: test_simple_pipeline.py
(+4 files in other folders)
